- train-test split improved - documents that are converted using slided window implemented - some improvements in util

--- a/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
+++ b/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,19 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIR = '/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/TRAIN_DEV_ULTIMATE_OLD_API_with_IDF_with_1_0_0'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 329,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "DIR = '/media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/mean_layers_-1-2-3-4'\n",
     "args={\n",
     "'train_word_embeddings': 'train_word_embeddings.txt',\n",
     "'dev_word_embeddings': 'dev_word_embeddings.txt',\n",
@@ -46,11 +38,11 @@
     "'dev_paragraph_embeddings': 'dev_paragraph_embeddings.hdf5',\n",
     "'dev_question_embeddings': 'dev_question_embeddings.hdf5',\n",
     "\n",
-    "'ultimate_paragraph_embeddings': 'ultimate_paragraph_embeddings.hdf5',\n",
-    "'ultimate_question_embeddings': 'ultimate_question_embeddings.hdf5',\n",
-    "'ultimate_dataset_question_file': 'ultimate_dataset_question_file.txt',\n",
-    "'ultimate_dataset_paragraph_file': 'ultimate_dataset_paragraph_file.txt',\n",
-    "'ultimate_question_labels': 'ultimate_question_labels.csv',\n",
+    "'ultimate_paragraph_embeddings': 'paragraph_embeddings.hdf5',\n",
+    "'ultimate_question_embeddings': 'question_embeddings.hdf5',\n",
+    "'ultimate_dataset_question_file': 'dataset_question_file.txt',\n",
+    "'ultimate_dataset_paragraph_file': 'dataset_paragraph_file.txt',\n",
+    "'ultimate_question_labels': 'question_labels.csv',\n",
     "'ultimate_word_embeddings': 'ultimate_word_embeddings.txt'\n",
     "}"
    ]
@@ -64,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 48/48 [00:08<00:00,  5.93it/s]\n"
+      "100%|██████████| 48/48 [00:06<00:00,  7.30it/s]\n"
      ]
     },
     {
@@ -105,7 +97,8 @@
       "--------------------\n",
       "Questions: Tokenization and Saving Tokenization Started in DEV\n",
       "# of Tokenized Questions in DEV : 10570\n",
-      "Parsing Ended in 0.2 minutes\n",
+      "Mapping data is dumped to /media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/mean_layers_-1-2-3-4/dev_question_labels.csv\n",
+      "Parsing Ended in 0.18333333333333332 minutes\n",
       "****************************************************************************************************\n",
       "Len of Dev Questions: 10570, Len of Dev Paragraphs: 2067\n",
       "****************************************************************************************************\n",
@@ -117,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 442/442 [01:05<00:00,  6.70it/s]\n"
+      "100%|██████████| 442/442 [01:10<00:00,  6.30it/s]\n"
      ]
     },
     {
@@ -134,9 +127,20 @@
       "--------------------\n",
       "Questions: Tokenization and Saving Tokenization Started in TRAIN\n",
       "# of Tokenized Questions in TRAIN : 87599\n",
-      "Parsing Ended in 1.8666666666666667 minutes\n",
+      "Mapping data is dumped to /media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/mean_layers_-1-2-3-4/train_question_labels.csv\n",
+      "Parsing Ended in 1.9833333333333334 minutes\n",
       "****************************************************************************************************\n",
-      "Len of Train Questions: 87599, Len of Train Paragraphs: 18896\n"
+      "Len of Train Questions: 87599, Len of Train Paragraphs: 18896\n",
+      "Len of Ultimate Questions: 98169, Len of Ultimate Paragraphs: 20963\n",
+      "(10570, 2)\n",
+      "(87599, 2)\n",
+      "(98169, 2)\n",
+      "(10570, 768)\n",
+      "(87599, 768)\n",
+      "(98169, 768)\n",
+      "(2067, 768)\n",
+      "(18896, 768)\n",
+      "(20963, 768)\n"
      ]
     }
    ],
@@ -144,7 +148,9 @@
     "dev_tokenized_questions, \\\n",
     "dev_tokenized_paragraphs,\\\n",
     "dev_questions_nontokenized,\\\n",
-    "dev_paragraphs_nontokenized = UTIL.prepare_squad_objects(os.path.join(DIR, args['dev_dataset_file']), 'DEV')\n",
+    "dev_paragraphs_nontokenized = UTIL.prepare_squad_objects(os.path.join(DIR, args['dev_dataset_file']), 'DEV', \n",
+    "                                                         is_dump_during_execution=True,\n",
+    "                                                         mapping_file=os.path.join(DIR, args['dev_question_labels']))\n",
     "\n",
     "print('Len of Dev Questions: {}, Len of Dev Paragraphs: {}'.format(len(dev_tokenized_questions),\n",
     "                                                                  len(dev_tokenized_paragraphs)))\n",
@@ -152,58 +158,22 @@
     "train_tokenized_questions, \\\n",
     "train_tokenized_paragraphs,\\\n",
     "train_questions_nontokenized,\\\n",
-    "train_paragraphs_nontokenized = UTIL.prepare_squad_objects(os.path.join(DIR, args['train_dataset_file']), 'TRAIN')\n",
+    "train_paragraphs_nontokenized = UTIL.prepare_squad_objects(os.path.join(DIR, args['train_dataset_file']), 'TRAIN',\n",
+    "                                                          is_dump_during_execution=True,\n",
+    "                                                         mapping_file=os.path.join(DIR, args['train_question_labels']))\n",
     "print('Len of Train Questions: {}, Len of Train Paragraphs: {}'.format(len(train_tokenized_questions),\n",
     "                                                                  len(train_tokenized_paragraphs)))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Len of Ultimate Questions: 98169, Len of Ultimate Paragraphs: 20963\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
+    "\n",
     "ultimate_tokenized_questions = dev_tokenized_questions + train_tokenized_questions\n",
     "ultimate_tokenized_paragraphs = dev_tokenized_paragraphs + train_tokenized_paragraphs\n",
     "ultimate_questions_nontokenized = dev_questions_nontokenized + train_questions_nontokenized\n",
     "ultimate_paragraphs_nontokenized = dev_paragraphs_nontokenized + train_paragraphs_nontokenized\n",
     "print('Len of Ultimate Questions: {}, Len of Ultimate Paragraphs: {}'.format(len(ultimate_tokenized_questions),\n",
     "                                                                  len(ultimate_tokenized_paragraphs)))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## QUESTION LABELS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10570, 2)\n",
-      "(87599, 2)\n",
-      "(98169, 2)\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
+    "#QUESTION LABELS #\n",
+    "\n",
     "dev_question_labels = pd.read_csv(os.path.join(DIR, args['dev_question_labels']))\n",
     "print(dev_question_labels.shape)\n",
     "train_question_labels = pd.read_csv(os.path.join(DIR, args['train_question_labels']))\n",
@@ -213,54 +183,18 @@
     "ultimate_question_labels = pd.concat(frames, ignore_index=True)\n",
     "del dev_question_labels, train_question_labels,frames\n",
     "ultimate_question_labels.reset_index()\n",
-    "print(ultimate_question_labels.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(ultimate_question_labels.shape)\n",
+    "\n",
+    "\n",
     "ultimate_question_labels.loc[ultimate_question_labels.index >= 10570, ['p'] ] = ultimate_question_labels + len(dev_tokenized_paragraphs)\n",
-    "ultimate_question_labels.loc[ultimate_question_labels.index >= 10570, ['q'] ] = ultimate_question_labels + len(dev_tokenized_questions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ultimate_question_labels.loc[ultimate_question_labels.index >= 10570, ['q'] ] = ultimate_question_labels + len(dev_tokenized_questions)\n",
+    "\n",
     "#ultimate_question_labels[ultimate_question_labels.index >= 0]\n",
-    "ultimate_question_labels.to_csv(os.path.join(DIR, args['ultimate_question_labels']), index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## DATASET FILES"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 291,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ultimate_tokenized_questions' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-----------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m           Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-291-442dcbb59d0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ultimate_dataset_question_file'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfout\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0msentence\u001b[0m \u001b[0;32min\u001b[0m \u001b[0multimate_tokenized_questions\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mcleaned_sentence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msentence\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mfout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcleaned_sentence\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ultimate_tokenized_questions' is not defined"
-     ]
-    }
-   ],
-   "source": [
+    "ultimate_question_labels.to_csv(os.path.join(DIR, args['ultimate_question_labels']), index=False)\n",
+    "\n",
+    "\n",
+    "# DATASET FILES #\n",
+    "\n",
     "with open(os.path.join(DIR, args['ultimate_dataset_question_file']), 'w') as fout:\n",
     "    for sentence in ultimate_tokenized_questions:\n",
     "        cleaned_sentence = [word.replace('\\n', ' ') for word in sentence]\n",
@@ -269,70 +203,24 @@
     "with open(os.path.join(DIR, args['ultimate_dataset_paragraph_file']), 'w') as fout:\n",
     "    for sentence in ultimate_tokenized_paragraphs:\n",
     "        cleaned_sentence = [word.replace('\\n', ' ') for word in sentence]\n",
-    "        fout.write(' '.join(cleaned_sentence) + '\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## DOCUMENT EMBEDDINGS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 322,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10570, 1024)\n",
-      "(87599, 1024)\n",
-      "(98169, 1024)\n"
-     ]
-    }
-   ],
-   "source": [
+    "        fout.write(' '.join(cleaned_sentence) + '\\n')\n",
+    "\n",
+    "# DOCUMENT EMBEDDINGS #\n",
+    "\n",
     "dev_question_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['dev_question_embeddings']))\n",
     "print(dev_question_embeddings.shape)\n",
     "train_question_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['train_question_embeddings']))\n",
     "print(train_question_embeddings.shape)\n",
     "ultimate_question_embeddings = np.vstack((dev_question_embeddings, train_question_embeddings))\n",
-    "print(ultimate_question_embeddings.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 323,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2067, 1024)\n",
-      "(18896, 1024)\n",
-      "(20963, 1024)\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(ultimate_question_embeddings.shape)\n",
+    "\n",
     "dev_paragraph_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['dev_paragraph_embeddings']))\n",
     "print(dev_paragraph_embeddings.shape)\n",
     "train_paragraph_embeddings = UTIL.load_embeddings(os.path.join(DIR, args['train_paragraph_embeddings']))\n",
     "print(train_paragraph_embeddings.shape)\n",
     "ultimate_paragraph_embeddings = np.vstack((dev_paragraph_embeddings, train_paragraph_embeddings))\n",
-    "print(ultimate_paragraph_embeddings.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 324,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(ultimate_paragraph_embeddings.shape)\n",
+    "\n",
     "UTIL.dump_embeddings(ultimate_question_embeddings, os.path.join(DIR, args['ultimate_question_embeddings']))\n",
     "UTIL.dump_embeddings(ultimate_paragraph_embeddings, os.path.join(DIR, args['ultimate_paragraph_embeddings']))"
    ]
