- idf weights are integrated to non meaned/CNN tokens

--- a/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
+++ b/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jackalhan/Development/github/more_meaningful_representations/venv/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import h5py\n",
     "import numpy as np\n",
@@ -20,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIR = '/media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/mean_layers_-1-2-3-4'\n",
+    "DIR = '/media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/ind_layers-4'\n",
     "args={\n",
     "'train_word_embeddings': 'train_word_embeddings.txt',\n",
     "'dev_word_embeddings': 'dev_word_embeddings.txt',\n",
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 48/48 [00:06<00:00,  7.30it/s]\n"
+      "100%|██████████| 48/48 [00:08<00:00,  5.91it/s]\n"
      ]
     },
     {
@@ -97,8 +106,8 @@
       "--------------------\n",
       "Questions: Tokenization and Saving Tokenization Started in DEV\n",
       "# of Tokenized Questions in DEV : 10570\n",
-      "Mapping data is dumped to /media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/mean_layers_-1-2-3-4/dev_question_labels.csv\n",
-      "Parsing Ended in 0.18333333333333332 minutes\n",
+      "Mapping data is dumped to /media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/ind_layers-4/dev_question_labels.csv\n",
+      "Parsing Ended in 0.2 minutes\n",
       "****************************************************************************************************\n",
       "Len of Dev Questions: 10570, Len of Dev Paragraphs: 2067\n",
       "****************************************************************************************************\n",
@@ -110,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 442/442 [01:10<00:00,  6.30it/s]\n"
+      "100%|██████████| 442/442 [01:05<00:00,  6.75it/s]\n"
      ]
     },
     {
@@ -127,8 +136,8 @@
       "--------------------\n",
       "Questions: Tokenization and Saving Tokenization Started in TRAIN\n",
       "# of Tokenized Questions in TRAIN : 87599\n",
-      "Mapping data is dumped to /media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/mean_layers_-1-2-3-4/train_question_labels.csv\n",
-      "Parsing Ended in 1.9833333333333334 minutes\n",
+      "Mapping data is dumped to /media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/ind_layers-4/train_question_labels.csv\n",
+      "Parsing Ended in 1.8333333333333333 minutes\n",
       "****************************************************************************************************\n",
       "Len of Train Questions: 87599, Len of Train Paragraphs: 18896\n",
       "Len of Ultimate Questions: 98169, Len of Ultimate Paragraphs: 20963\n",
