--- a/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
+++ b/squad/Ultimate_Dataset_Preperation_From_Original_Filles.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIR = '/media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/ind_layers-4'\n",
+    "DIR = '//media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/elmo/train/non_idf/ind_layers_-3'\n",
     "args={\n",
     "'train_word_embeddings': 'train_word_embeddings.txt',\n",
     "'dev_word_embeddings': 'dev_word_embeddings.txt',\n",
@@ -65,51 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 0/48 [00:00<?, ?it/s]"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "****************************************************************************************************\n",
-      "Parsing Started\n",
-      "Generating DEV examples...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 48/48 [00:08<00:00,  5.91it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10570 questions in total\n",
-      "# of Paragraphs in DEV : 2067\n",
-      "# of Questions in DEV : 10570\n",
-      "# of Q_to_P DEV : 10570\n",
-      "--------------------\n",
-      "Paragraphs: Tokenization and Saving Tokenization Started in DEV\n",
-      "# of Tokenized Paragraphs in DEV : 2067\n",
-      "--------------------\n",
-      "Questions: Tokenization and Saving Tokenization Started in DEV\n",
-      "# of Tokenized Questions in DEV : 10570\n",
-      "Mapping data is dumped to /media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/ind_layers-4/dev_question_labels.csv\n",
-      "Parsing Ended in 0.2 minutes\n",
-      "****************************************************************************************************\n",
-      "Len of Dev Questions: 10570, Len of Dev Paragraphs: 2067\n",
       "****************************************************************************************************\n",
       "Parsing Started\n",
       "Generating TRAIN examples...\n"
@@ -119,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 442/442 [01:05<00:00,  6.75it/s]\n"
+      "100%|██████████| 442/442 [01:02<00:00,  7.08it/s]\n"
      ]
     },
     {
@@ -136,33 +98,34 @@
       "--------------------\n",
       "Questions: Tokenization and Saving Tokenization Started in TRAIN\n",
       "# of Tokenized Questions in TRAIN : 87599\n",
-      "Mapping data is dumped to /media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/bert/dev-train/non_idf/ind_layers-4/train_question_labels.csv\n",
-      "Parsing Ended in 1.8333333333333333 minutes\n",
+      "Mapping data is dumped to //media/jackalhan/Extreme 500/Development/DATA_for_MORE_MEANING/Rethinking_Embedding_Results/elmo/train/non_idf/ind_layers_-3/train_question_labels.csv\n",
+      "Parsing Ended in 1.8166666666666667 minutes\n",
       "****************************************************************************************************\n",
-      "Len of Train Questions: 87599, Len of Train Paragraphs: 18896\n",
-      "Len of Ultimate Questions: 98169, Len of Ultimate Paragraphs: 20963\n",
-      "(10570, 2)\n",
-      "(87599, 2)\n",
-      "(98169, 2)\n",
-      "(10570, 768)\n",
-      "(87599, 768)\n",
-      "(98169, 768)\n",
-      "(2067, 768)\n",
-      "(18896, 768)\n",
-      "(20963, 768)\n"
+      "Len of Train Questions: 87599, Len of Train Paragraphs: 18896\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'dev_tokenized_questions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-03172e6d6dc3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0multimate_tokenized_questions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdev_tokenized_questions\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtrain_tokenized_questions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0multimate_tokenized_paragraphs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdev_tokenized_paragraphs\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtrain_tokenized_paragraphs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0multimate_questions_nontokenized\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdev_questions_nontokenized\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtrain_questions_nontokenized\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dev_tokenized_questions' is not defined"
      ]
     }
    ],
    "source": [
-    "dev_tokenized_questions, \\\n",
-    "dev_tokenized_paragraphs,\\\n",
-    "dev_questions_nontokenized,\\\n",
-    "dev_paragraphs_nontokenized = UTIL.prepare_squad_objects(os.path.join(DIR, args['dev_dataset_file']), 'DEV', \n",
-    "                                                         is_dump_during_execution=True,\n",
-    "                                                         mapping_file=os.path.join(DIR, args['dev_question_labels']))\n",
+    "# dev_tokenized_questions, \\\n",
+    "# dev_tokenized_paragraphs,\\\n",
+    "# dev_questions_nontokenized,\\\n",
+    "# dev_paragraphs_nontokenized = UTIL.prepare_squad_objects(os.path.join(DIR, args['dev_dataset_file']), 'DEV', \n",
+    "#                                                          is_dump_during_execution=True,\n",
+    "#                                                          mapping_file=os.path.join(DIR, args['dev_question_labels']))\n",
     "\n",
-    "print('Len of Dev Questions: {}, Len of Dev Paragraphs: {}'.format(len(dev_tokenized_questions),\n",
-    "                                                                  len(dev_tokenized_paragraphs)))\n",
+    "# print('Len of Dev Questions: {}, Len of Dev Paragraphs: {}'.format(len(dev_tokenized_questions),\n",
+    "#                                                                   len(dev_tokenized_paragraphs)))\n",
     "\n",
     "train_tokenized_questions, \\\n",
     "train_tokenized_paragraphs,\\\n",
