- bm25 and tfidf dimensions are fixed

--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -28,34 +15,38 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import collections\n",
-    "from plotly import tools\n",
-    "import plotly as py\n",
-    "import plotly.graph_objs as go\n",
+    "# from plotly import tools\n",
+    "# import plotly as py\n",
+    "# import plotly.graph_objs as go\n",
     "#import impywidgets as widget\n",
-    "py.offline.init_notebook_mode(connected=True)"
+    "# py.offline.init_notebook_mode(connected=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_data_path = \"/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/\""
+    "base_data_path = \"/media/jackalhan/ext_ssd\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_1_mar_1.0_sf_1_1_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl']"
+       "['0 --> /media/jackalhan/ext_ssd/debug_dict.pkl',\n",
+       " '16 --> /media/jackalhan/ext_ssd/Rethinking_Running_Data/dev/tfidf/source_destination_tfidf_embeddings_token_verbose_None.pkl',\n",
+       " '3 --> /media/jackalhan/ext_ssd/Rethinking_Running_Data/dev/glove/source_destination_glove_embeddings_token_verbose_None.pkl',\n",
+       " '35 --> /media/jackalhan/ext_ssd/Rethinking_Running_Data/dev/bert/bert_new_destination_tokens.pkl',\n",
+       " '48 --> /media/jackalhan/ext_ssd/Rethinking_Running_Data/train/bert/bert_new_destination_tokens.pkl']"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_indx =1\n",
+    "model_indx =0\n",
     "my_dict = load_from_pickle(os.path.join(base_data_path, \n",
     "                                        debug_files[model_indx]))\n",
     "num_of_epochs = my_dict['epochs']"
@@ -84,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -111,6 +102,7 @@
        "      <th>eval_metric_name</th>\n",
        "      <th>1</th>\n",
        "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <th>5</th>\n",
        "      <th>10</th>\n",
        "      <th>20</th>\n",
@@ -121,17 +113,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>recall</td>\n",
-       "      <td>0.37</td>\n",
-       "      <td>0.515</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.895</td>\n",
-       "      <td>0.955</td>\n",
+       "      <td>arp</td>\n",
        "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>102.108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>dcg</td>\n",
+       "      <td>0.296878</td>\n",
+       "      <td>0.357165</td>\n",
+       "      <td>0.386541</td>\n",
+       "      <td>0.414938</td>\n",
+       "      <td>0.445104</td>\n",
+       "      <td>0.466758</td>\n",
+       "      <td>0.48464</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>map</td>\n",
+       "      <td>0.296878</td>\n",
+       "      <td>0.344655</td>\n",
+       "      <td>0.364238</td>\n",
+       "      <td>0.379991</td>\n",
+       "      <td>0.392568</td>\n",
+       "      <td>0.398554</td>\n",
+       "      <td>0.401482</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ndcg</td>\n",
+       "      <td>0.296878</td>\n",
+       "      <td>0.357165</td>\n",
+       "      <td>0.386541</td>\n",
+       "      <td>0.414938</td>\n",
+       "      <td>0.445104</td>\n",
+       "      <td>0.466758</td>\n",
+       "      <td>0.48464</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>precision</td>\n",
+       "      <td>0.296878</td>\n",
+       "      <td>0.196216</td>\n",
+       "      <td>0.150394</td>\n",
+       "      <td>0.10403</td>\n",
+       "      <td>0.0612772</td>\n",
+       "      <td>0.0349054</td>\n",
+       "      <td>0.0157502</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>mrp</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
@@ -139,17 +180,19 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>0.507712</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0.402797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>precision</td>\n",
-       "      <td>0.37</td>\n",
-       "      <td>0.2575</td>\n",
-       "      <td>0.132</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.04475</td>\n",
-       "      <td>0.0191</td>\n",
+       "      <th>6</th>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.296878</td>\n",
+       "      <td>0.392431</td>\n",
+       "      <td>0.451183</td>\n",
+       "      <td>0.520151</td>\n",
+       "      <td>0.612772</td>\n",
+       "      <td>0.698108</td>\n",
+       "      <td>0.787512</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -157,13 +200,26 @@
        "</div>"
       ],
       "text/plain": [
-       "  eval_metric_name     1       2      5    10       20      50       all\n",
-       "0           recall  0.37   0.515   0.66   0.8    0.895   0.955         -\n",
-       "1              mrp     -       -      -     -        -       -  0.507712\n",
-       "2        precision  0.37  0.2575  0.132  0.08  0.04475  0.0191         -"
+       "  eval_metric_name         1         2         3         5         10  \\\n",
+       "0              arp         -         -         -         -          -   \n",
+       "1              dcg  0.296878  0.357165  0.386541  0.414938   0.445104   \n",
+       "2              map  0.296878  0.344655  0.364238  0.379991   0.392568   \n",
+       "3             ndcg  0.296878  0.357165  0.386541  0.414938   0.445104   \n",
+       "4        precision  0.296878  0.196216  0.150394   0.10403  0.0612772   \n",
+       "5              mrp         -         -         -         -          -   \n",
+       "6           recall  0.296878  0.392431  0.451183  0.520151   0.612772   \n",
+       "\n",
+       "          20         50       all  \n",
+       "0          -          -   102.108  \n",
+       "1   0.466758    0.48464         -  \n",
+       "2   0.398554   0.401482         -  \n",
+       "3   0.466758    0.48464         -  \n",
+       "4  0.0349054  0.0157502         -  \n",
+       "5          -          -  0.402797  \n",
+       "6   0.698108   0.787512         -  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
